[package]
name = "web_crawler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.13.0", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"]}
futures = "0.3.17"
async-recursion = "0.3.2"
csv = "1.1"
toml = "0.5.8"
tokio-postgres = {version = "0.7.5", features =["with-chrono-0_4"] }